@@ -2906,6 +2906,10 @@ _EOF_
 
 			fi
 
+			#	Set performance CPU gov for stability
+			sed -i "/^cpu_governor=/c\cpu_governor=performance" /DietPi/dietpi.txt
+			/DietPi/dietpi/dietpi-cpu_set
+
 		fi
 		#-------------------------------------------------------------------------------
 		#@MichaIng Move Stretch instances from MySQL to MariaDB: https://github.com/Fourdee/DietPi/pull/1280
