@@ -9,6 +9,7 @@ DietPi-Globals | New script which optimizes most used DietPi commands and vars, 
 General | Start of FHS compliance: https://github.com/Fourdee/DietPi/issues/1297#issuecomment-352241193
 General | wget: Now set to prefer IPv4 by default (generally faster): https://github.com/Fourdee/DietPi/issues/1285#issuecomment-353230187
 General | APT: Now set to force IPv4 by default (generally faster): https://github.com/Fourdee/DietPi/issues/1285#issuecomment-353230187
+General | SparkySBC: CPU gov default changed to Performance, reports of increased stability.
 DietPi-Boot | Improved the method of initial FS_partition and FS_expansion during 1st run, via systemD services. 'fs_force_resize=' in dietpi.txt is no longer supported: https://github.com/Fourdee/DietPi/issues/1285#issuecomment-352159930
 DietPi-Banner | IP: Will now also list the active network adapter used (eg: eth0/wlan0)
 DietPi-Drive_Manager | Added support for exFAT, many thanks @MichaIng : https://github.com/Fourdee/DietPi/pull/1312
